vista-cerrar orden dibujo

--- a/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
+++ b/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.html
@@ -12,5 +12,8 @@
         <div class='about-button'>
             <span><a [routerLink]="['/reportes']" >REPORTES</a></span>
         </div>
+        <div class='about-button'>
+            <span><a [routerLink]="['/cerrar-ordenes']" >CERRAR ORDENES</a></span>
+        </div>
     </div>
 </div>
