--- a/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.scss
+++ b/src/app/components/perfilGerente/navbar-perfil-gerente/navbar-perfil-gerente.component.scss
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: center;
     margin-left: 20px;
+    margin-right: 10px;
 }
 .navbar .options-menu .incio-button a{
     color: black;
@@ -58,6 +59,7 @@
     width: 30%;
     display: flex;
     justify-content: center;
+    margin-right: 10px;
 }
 .navbar .options-menu .contacto-button a{
     color: black;
