lista gerente sin funcionalidad

--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.html
@@ -2,17 +2,31 @@
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
 <div class="wrapper">
-    <div class="selector">
-        <select id = "busqueda">
-            <option value = "Cedula">Cedula</option>
-            <option value = "Correo">Correo</option>
-            <option value = "Nombre">Nombre</option>
-        </select>   
+    <div class="contenedor">
+        <div class="selector">
+            <select id = "busqueda">
+                <option value = "Cedula">Cedula</option>
+                <option value = "Correo">Correo</option>
+                <option value = "Nombre">Nombre</option>
+            </select>   
+        </div>
+        <div class="search">
+            <input type="text" placeholder="  Busque a un cliente">
+        </div>
+        <div class="btn-search">
+            <button>Buscar</button>
+        </div>
     </div>
-    <div class="search">
-        <input type="text" placeholder="  Busque a un cliente">
-    </div>
-    <div class="btn-search">
-        <button>Buscar</button>
+    
+    <div class="container">
+        <p>Nombre:</p>
+        <p>Correo:</p>
+        <p>Cedula:</p>
+        <p>Cantidad de citas:</p>
+        <p>Cantidad de vehiculos registrados:</p>
+        <p>Vehiculo 1:</p>
+        <p>Vehiculo 2:</p>
+        <p>Vehiculo 3:</p>
+        <p>Dinero gastado por el cliente:</p>
     </div>
 </div>
