--- a/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
+++ b/src/app/pages/perfil-gerente/vista-reporte-cliente/vista-reporte-cliente.component.scss
@@ -5,24 +5,30 @@
     width: 75%;
     background-color: rgb(66, 66, 66);
     float: left;
-    display: flex;
-    justify-content: space-around;
 }
 
 select{
     width: 100px;
     height: 30px;
-    margin-left: -100px;
+    margin-left: 100px;
     margin-top: 40px;
     font-family: 'Athiti', sans-serif ;
-    background-color: rgb(255, 201, 51);;
+    background-color: rgb(255, 201, 51);
+}
+
+.contenedor{
+    background-color: blue;
+    display: flex;
+    justify-content: space-evenly;
+    height: 0px;
+    width: 600px;
 }
 
 .search{
     height: 30px;
     width: 500px;
     margin-top: 40px;
-    margin-left: -350px;
+    margin-left: 10px;
 }
 
 input{
@@ -39,11 +45,26 @@ button{
     font-family: 'Athiti', sans-serif ;
     font-size: 15px;
     margin-top: 40px;
-    margin-right: 200px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
 .btn-search{
     width: 0px;
-    margin-left: -360px;
+    margin-left: 10px;
+}
+
+.container{
+    height: 350px;
+    margin-top: 100px;
+    font-family: 'Athiti', sans-serif;
+    background-color: rgb(255, 201, 51);
+    width: 65%;
+    margin-left: 20%;
+}
+
+p{
+    margin-top: 25px;
+    height: 15px;
+    margin-left: 20px;
 }
