--- a/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-vehiculo/vista-reporte-vehiculo.component.html
@@ -1,3 +1,23 @@
 <app-navbar-derecho-gerente></app-navbar-derecho-gerente>
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
+<div class="wrapper">
+    <div class="contenedor">
+        <div class="search">
+            <input type="text" placeholder="  Ingrese placa del vehiculo">
+        </div>
+        <div class="btn-search">
+            <button>Buscar</button>
+        </div>
+    </div>
+    
+    <div class="container">
+        <p>Dueno del vehiculo:</p>
+        <p>Placa:</p>
+        <p>Modelo:</p>
+        <p>Servicio hecho por el mecanico:</p>
+        <p>Danos:</p>
+        <p>Nombre del mecanico:</p>
+    </div>
+</div>
+
