--- a/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
+++ b/src/app/pages/perfil-gerente/vista-reporte-mecanico/vista-reporte-mecanico.component.html
@@ -1,3 +1,22 @@
 <app-navbar-derecho-gerente></app-navbar-derecho-gerente>
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
+<div class="wrapper">
+    <div class="contenedor">
+        <div class="search">
+            <input type="text" placeholder="  Ingrese placa del vehiculo">
+        </div>
+        <div class="btn-search">
+            <button>Buscar</button>
+        </div>
+    </div>
+    
+    <div class="container">
+        <p>Nombre del Mecanico:</p>
+        <p>Tiempo de trabajo:</p>
+        <p>Cantidad de vehiculos atendidos:</p>
+        <p>Servicio hecho por el mecanico:</p>
+        <p>Ordenes atendidas:</p>
+    </div>
+</div>
+
