--- a/src/app/pages/perfil-gerente/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/pages/perfil-gerente/vista-ordenes/vista-ordenes.component.html
@@ -2,5 +2,5 @@
 <app-navbar-perfil-gerente></app-navbar-perfil-gerente>
 
 <div class="wrapper">
-
+    <zxing-scanner name='qr' [formats]="['QR_CODE', 'EAN_13', 'CODE_128', 'DATA_MATRIX']" (scanSuccess)="scanSuccessHandler($event)"></zxing-scanner>
 </div>
