resolucion de errores2

--- a/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
@@ -8,7 +8,7 @@
       </div>
   </div>
   <div class='input-section'>
-      <form [formGroup]="registroVehiculoForm" (ngSubmit)='search()' class='input-form'>
+      <form [formGroup]="registroVehiculoForm"  class='input-form'>
           <div class='input'>
               <input type="text" formControlName="correo" required><span class='bar'></span>
               <span>INGRESA LEL CORREO DEL USUARIO AL QUE ASIGNAR UNA CITA</span>
