--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
@@ -1,16 +1,16 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
-<div class="ventana">
-    <div class="espacio"></div>
-    <div class="contenedor">
-        <div class="inicio">
-           <img src="" alt="">
+<div class="container-fluid">
+    <div class="container-fluid"></div>
+    <div class="row">
+        <div class="col-md-6">
+           <img class="container-fluid" src="https://static.straitstimes.com.sg/s3fs-public/styles/article_pictrure_780x520_/public/articles/2020/12/08/ST_20201208_VNCAR_6174629.jpg?itok=NBJ_ss3A&timestamp=1607366678" alt="">
         </div>
-        <div class="cuadros">
-                <div class="titulo"><span>Equipo Paralelo 4x4</span></div>
-                <div class="info"><p>Somos un taller mecánico exclusivo ubicado en una de las mejores zonas de Caracas. <br>
-
-                    Nos dedicamos a la mecánica ligera, cambios estéticos e instalación de accesorios que se encuentran disponibles en nuestro showroom.
+        <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Equipo Paralelo 4x4</h1>
+                        <p>Somos un taller mecánico exclusivo ubicado en una de las mejores zonas de Caracas. Nos dedicamos a la mecánica ligera, cambios estéticos e instalación de accesorios que se encuentran disponibles en nuestro showroom.
                     <br>
                     ACTIVIDADES: <br>
                     -Mecánica Ligera <br>
@@ -23,7 +23,8 @@
                     
                     
                     Tenemos un equipo altamente calificado para las distintas actividades.</p>    
-                </div>             
+                    </div>       
+                </div>      
         </div>
     </div>
 
