--- a/src/app/components/paginaPrincipal/authform/authform.component.html
+++ b/src/app/components/paginaPrincipal/authform/authform.component.html
@@ -1,43 +1,44 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
 
-<div class='wrapper'>
-    <div class='title-box'>
-        <div class='title'>
+<div class="container-fluid">
+    <div class="container">
             <span>REGÍSTRATE</span>
-        </div>
     </div>
-    <div class='form-square'>
-        <div class='form-square-background'>
-            <form class='form' [formGroup]="authForm" (ngSubmit)="onSubmit()" >
-                <div class='group1' *ngIf="withDisplayName">
+    <div class='row'>
+        <div class='col-md-12'>
+            <form [formGroup]="authForm" (ngSubmit)="onSubmit()" >
+                <div class='form-group' *ngIf="withDisplayName">
                     <input type="text"
+                    class="form-control"
                     id="name"
                     formControlName="displayname"
                     placeholder="   Ingrese su nombre"
                     required><span class='bar'></span>
-                    <label for='passwordbien'>NOMBRE</label>
+                    <label for='exampleInputEmail1'>NOMBRE</label>
                 </div>
-                <div class='group2' *ngIf="withDisplayName">
+                <div class='form-group' *ngIf="withDisplayName">
                     <input type="email"
+                    class="form-control"
                     id="email"
                     formControlName="email"
                     placeholder="   Ingrese su correo"
                     required><span class='bar'></span>
                     <label for="email">EMAIL</label>
                 </div>
-                <div class='group3'*ngIf="withDisplayName">
+                <div class='form-group'*ngIf="withDisplayName">
                     <input type="password" 
+                    class="form-control"
                     id="password"
                     formControlName="password"
                     placeholder="   Ingrese su contraseña"
                     required><span class='bar'></span>
                     <label for="password">CONTRASEÑA</label>
                 </div>
-                <div *ngIf="withDisplayName">
-                    <button type="submit">SEND</button>
-                    <button type="button" (click)="handleGoogleLogin()">SIGN UP WITH GOOGLE</button>
-                </div> 
+                <!--<div *ngIf="withDisplayName"></div> -->
+                    <button type="submit" class="btn btn-primary">SEND</button>
+                    <button type="button" class="btn btn-primary" (click)="handleGoogleLogin()">SIGN UP WITH GOOGLE</button>
+                
             </form>
         </div>
     </div>
