--- a/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.scss
@@ -5,6 +5,11 @@
     width: 25%;
     height: 100%;
 }
+@media screen and (max-width: 600px) {
+    .right-navbar{
+    display:none;
+    }
+    }
 
 .right-navbar .buttons{
     width: 100%;
