--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
@@ -1,35 +1,40 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
-<div class="ventana">
-    <div class="espacio"></div>
-    <div class="contenedor">
-        <div class="inicio">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15692.814003310756!2d-66.8649287!3d10.484618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8f484845edb5a8f8!2sParalelo%204x4%20store!5e0!3m2!1sen!2sve!4v1616781037499!5m2!1sen!2sve" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<div class="container-fluid">
+    <div class="container-fluid"></div>
+    <div class="row">
+        <div class="col-md-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15692.814003310756!2d-66.8649287!3d10.484618!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8f484845edb5a8f8!2sParalelo%204x4%20store!5e0!3m2!1sen!2sve!4v1616781037499!5m2!1sen!2sve" class="container-fluid" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-        <div class="cuadros">
-                <div class="titulo"><span>UBICACIÓN</span></div>
-                <div class="ubi"><span>Estación de servicio Texaco, <br> Av. ppal de Las Mercedes <br>
-                    Caracas, Venezuela</span></div>
-                <div class="contacto"><span>CONTACTO</span></div>
-                <div class="redes">
-                    <div class="logoig">
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1>UBICACIÓN</h1>
+                    <span>Estación de servicio Texaco, <br> Av. ppal de Las Mercedes <br>
+                        Caracas, Venezuela</span>
+                    <h1>CONTACTO</h1>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-sm-2">
                         <img src="https://image.flaticon.com/icons/png/512/174/174855.png" alt="">
                     </div>
-                    <div class="arroba">
+                    <div class="col-sm-10">
                         <a href="https://www.instagram.com/paralelo4x4store/?hl=es-la">
-                            <span>@paralelo4x4store</span></a>
+                        <span>@paralelo4x4store</span></a>
+                       
                     </div>
-                </div>   
-                <div class="redes">
-                    <div class="logoig">
+                </div>
+                <div class="row"> 
+                    <div class="col-sm-2">
                         <img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png" alt="">
                     </div>
-                    <div class="arroba">
+                    <div class="col-sm-10">
                         <span>+58 212 991 49 10</span>
                     </div>
-                </div>       
+                </div> 
+                
+            </div>          
         </div>
-    </div>
-
+    </div>    
 </div>
 
