--- a/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
@@ -10,7 +10,7 @@
   <div class='input-section'>
       <form [formGroup]="registroVehiculoForm"  class='input-form'>
           <div class='input'>
-              <input type="text" formControlName="correo" required><span class='bar'></span>
+              <input type="text" formControlName="correo" required placeholder="nombrecliente@example.com"><span class='bar'></span>
               <span>INGRESA LEL CORREO DEL USUARIO AL QUE ASIGNAR UNA CITA</span>
           </div>
           <button class='input-button' type="submit">BUSCAR</button>
@@ -23,15 +23,16 @@
       <div class='form-square-background'>
             <div class='identificador'>
                 <span *ngIf="correo">USUARIO DE CORREO {{correo}} ESPERANDO POR CITA</span>
-                <span *ngIf="!correo">SIN RESULTADOS</span>
+                <span *ngIf="!correo">ASIGNAR CITA A VC.RUJANA@CORREO.COM</span>
             </div>
           <form [formGroup]="fechaForm" class='fechaForm'>
             <div class='columnas'>
               <div class="cajas">
-                <div class="identificador">
-                    <label>nombre: </label>
+                <div class="identificador1">
+                    <label>Nombre: </label>
                 </div>
                 <div class="fecha">
+                    <label>Fecha: </label>
                     <input class="fechi" type="datetime-local" formControlName="fechax">
                 </div>
                 <div class="btn-asignar">
