--- a/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.scss
+++ b/src/app/pages/perfil-gerente/vista-cerrar-ordenes/vista-cerrar-ordenes.component.scss
@@ -1,4 +1,126 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
+.wrapper{
+    height: 80%;
+    width: 75%;
+    background-color: rgb(66, 66, 66);
+}
+
+.wrapper .title-box{
+    height: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+.wrapper .title-box .title{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 25px;
+    color: rgb(255, 201, 51);
+    margin-top: 20px;
+}
+
+
+//------>SEGUNDO BUSCADOR
+
+.wrapper .input-section{
+    height: 20%;
+    width: 100%;
+    display: flex;
+}
+
+.wrapper .input-section .input-form{
+    height: 20%;
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
+}
+
+.wrapper .input-section .input{
+    height: 65%;
+    width: 55%;
+    margin-left: 13px;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 12px; 
+    font-weight: bold;
+    margin-top: 20px;
+    color: white;
+}
+
+.wrapper .input-section .input-button{
+    height: 30px;
+    width: 70px;
+    margin-left: 10px;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 15px; 
+    font-weight: bold;
+    margin-top: 30px;
+    background-color: white;
+    border: none;
+}
+
+//------> FORM
+
+.form-square{
+    height: 75%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(66, 66, 66);
+}
+
+.form-square .form-square-background{
+    margin-top: 43px;
+    //display: flex;
+    //justify-content: center;
+    height: 65%;
+    width: 67%;
+    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    background-color: rgb(255, 201, 51);
+    border-radius: 36px 12px;
+}
+
+.form-square .form-square-background .cahnges-form{
+    justify-content: center;
+}
+
+.form-square .form-square-background .cahnges-form .identificador{
+    display: flex;
+    justify-content: center;
+    height: 10%;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 18px; 
+    font-weight: bold;
+}
+
+.form-square .form-square-background .cahnges-form .columnas{
+    display: flex;
+    justify-content: space-between;
+    height: 80%;
+}
+
+input{
+    width: 500px;
+    height: 10px;
+    border-radius: 36px 12px;                     
+    font-size: 15px;            
+    margin: 10px 10px 10px 5px; 
+    padding: 10px 10px 10px 5px;
+    display: block;             
+    border: none;
+}
+
+label{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
+    font-weight: bold;
+}
+
+//-------------------
+
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
 .wrapper{
@@ -13,8 +135,8 @@
     background-color: rgb(255, 201, 51);
     margin: 20px;
     margin-left: 150px;
-    height: 70%;
-    margin-top: 20px;
+    height: 80%;
+    margin-top: 60px;
     border-radius: 12px;
 }
 
@@ -38,41 +160,74 @@
     width: 200px;
 }
 
-.fa-arrow-left{
-    font-size: 26px;
-}
 
-.fa-arrow-right{
-    font-size: 26px;
-}
 
 .cajas{
-    background-color: white;
     height: 15%;
     margin-top: 15px;
     width: 93%;
     margin-left: 20px;
     font-family: "Athiti",sans-serif;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 .identificador{
     margin-top: 10px;
+    margin-left: 25%;
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+
 }
 
-.fechi{
-    width: 100px;
-    height: 10px;
-    border-color: black;
-    margin-top:10px;
-    border-radius: none;
+.float{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
 }
 
-.btn-cerrar{
-    height: 30px;
-    margin-top: 140px;
-    margin-left: 490px;
+
+.identificador1{
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+    margin: 0%;
+}
+
+
+label{
+    font-size: 17px;
+    margin-bottom: 10px;
+    color: white;
+    margin-top: 20px;
+    
+}
+
+
+.btn-asignar{
+    height: 35px;
+    margin-top: 80px;
+    margin-left: 227px;
+}
+
+.precio{
+    width: 120px;
+    height: 15px;
+    border: none;
+    margin-top: -10px;
+}
+
+
+.identificador2{
+    margin-top: 50px;
+}
+
+textarea{
+    height:40px;
+    margin-top: -10px;
+    width: 400px;
+    margin-left: -36px;
 }
 
 .asignar{
@@ -80,57 +235,19 @@
     border-color: black;
     background-color: white;
     cursor: pointer;
-    width: 160px;
+    width: 200px;
 }
 
-.wrapper .input-section{
-    margin-top: 20px;
-    height: 13%;
-    width: 100%;
-    display: flex;
+.asignar:hover{
+    background-color: lightgrey;
 }
 
-.wrapper .input-section .input-form{
-    height: 20%;
-    display: flex;
-    
-}
-
-input{
-    width: 500px;
-    height: 10px;
-    border-radius: 36px 12px;                     
-    font-size: 15px;            
-    margin: 10px 10px 10px 50px; 
-    padding: 10px 10px 10px 5px;
-    display: block;             
-    border: none;
-}
-
-.wrapper .input-section .input{
-    height: 30px;
-    margin-left: 100px;
-    font-family: 'Athiti', sans-serif ;
-    font-size: 13px; 
-    font-weight: bold;
-    margin-top: 20px;
+p{
     color: white;
-    border-radius: 36px 12px; 
-    border: none;
+    margin-top: 20px;
 }
 
-.wrapper .input-section .input-button{
-    height: 30px;
-    width: 70px;
-    margin-left: 10px;
-    font-family: 'Athiti', sans-serif ;
-    font-size: 15px; 
-    font-weight: bold;
-    margin-top: 30px;
-    background-color: white;
-    border: none;
-}
-
-.precio{
-    margin-left: 200px;
+.titulitos{
+    //background-color: hotpink;
+    height: 20px;
 }
