--- a/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.scss
+++ b/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.scss
@@ -16,6 +16,7 @@
     font-family: 'Athiti', sans-serif ;
     font-size: 25px;
     color: rgb(255, 201, 51);
+    margin-top: 20px;
 }
 
 
@@ -31,14 +32,15 @@
     height: 20%;
     width: 100%;
     display: flex;
+    margin-top: 20px;
 }
 
 .wrapper .input-section .input{
     height: 65%;
     width: 55%;
-    margin-left: 10px;
+    margin-left: 13px;
     font-family: 'Athiti', sans-serif ;
-    font-size: 13px; 
+    font-size: 12px; 
     font-weight: bold;
     margin-top: 20px;
     color: white;
@@ -67,16 +69,17 @@
 }
 
 .form-square .form-square-background{
-    margin-top: 5px;
-    display: flex;
-    justify-content: center;
-    height: 85%;
-    width: 55%;
+    margin-top: 43px;
+    //display: flex;
+    //justify-content: center;
+    height: 50%;
+    width: 50%;
     padding-bottom: 25px;
     padding-top: 10px;
     padding-right: 20px;
     padding-left: 20px;
     background-color: rgb(255, 201, 51);
+    border-radius: 36px 12px;
 }
 
 .form-square .form-square-background .cahnges-form{
@@ -166,31 +169,55 @@ label{
 }
 
 .cajas{
-    background-color: white;
     height: 15%;
     margin-top: 15px;
     width: 93%;
     margin-left: 20px;
     font-family: "Athiti",sans-serif;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 .identificador{
     margin-top: 10px;
-    margin-right: 100px;
+    margin-left: 10%;
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+
 }
 
+.identificador1{
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+    margin: 0%;
+}
+
+
+.fecha{
+    display: flex;
+    float: left;
+}
 .fechi{
-    width: 80px;
-    height: 30px;
+    width: 200px;
+    height: 20px;
     border-color: black;
     margin-top: 10px;
+    margin-left: 20px;
+}
+
+label{
+    font-size: 17px;
+    margin-bottom: 10px;
+    color: white;
+    margin-top: 20px;
 }
 
 .btn-asignar{
     height: 35px;
-    margin-top: 10px;
+    margin-top: 80px;
+    margin-left: 300px;
 }
 
 .asignar{
@@ -198,5 +225,9 @@ label{
     border-color: black;
     background-color: white;
     cursor: pointer;
-    width: 100px;
+    width: 150px;
+}
+
+.asignar:hover{
+    background-color: lightgrey;
 }
