--- a/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.scss
+++ b/src/app/pages/perfil-gerente/vista-citas-rechazadas/vista-citas-rechazadas.component.scss
@@ -1,4 +1,126 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
+.wrapper{
+    height: 80%;
+    width: 75%;
+    background-color: rgb(66, 66, 66);
+}
+
+.wrapper .title-box{
+    height: 5%;
+    display: flex;
+    justify-content: center;
+}
+
+.wrapper .title-box .title{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 25px;
+    color: rgb(255, 201, 51);
+    margin-top: 20px;
+}
+
+
+//------>SEGUNDO BUSCADOR
+
+.wrapper .input-section{
+    height: 20%;
+    width: 100%;
+    display: flex;
+}
+
+.wrapper .input-section .input-form{
+    height: 20%;
+    width: 100%;
+    display: flex;
+    margin-top: 20px;
+}
+
+.wrapper .input-section .input{
+    height: 65%;
+    width: 55%;
+    margin-left: 13px;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 12px; 
+    font-weight: bold;
+    margin-top: 20px;
+    color: white;
+}
+
+.wrapper .input-section .input-button{
+    height: 30px;
+    width: 70px;
+    margin-left: 10px;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 15px; 
+    font-weight: bold;
+    margin-top: 30px;
+    background-color: white;
+    border: none;
+}
+
+//------> FORM
+
+.form-square{
+    height: 75%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(66, 66, 66);
+}
+
+.form-square .form-square-background{
+    margin-top: 43px;
+    //display: flex;
+    //justify-content: center;
+    height: 60%;
+    width: 50%;
+    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    background-color: rgb(255, 201, 51);
+    border-radius: 36px 12px;
+}
+
+.form-square .form-square-background .cahnges-form{
+    justify-content: center;
+}
+
+.form-square .form-square-background .cahnges-form .identificador{
+    display: flex;
+    justify-content: center;
+    height: 10%;
+    font-family: 'Athiti', sans-serif ;
+    font-size: 18px; 
+    font-weight: bold;
+}
+
+.form-square .form-square-background .cahnges-form .columnas{
+    display: flex;
+    justify-content: space-between;
+    height: 80%;
+}
+
+input{
+    width: 500px;
+    height: 10px;
+    border-radius: 36px 12px;                     
+    font-size: 15px;            
+    margin: 10px 10px 10px 5px; 
+    padding: 10px 10px 10px 5px;
+    display: block;             
+    border: none;
+}
+
+label{
+    font-family: 'Athiti', sans-serif ;
+    font-size: 14px; 
+    font-weight: bold;
+}
+
+//-------------------
+
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
 .wrapper{
@@ -47,31 +169,56 @@
 }
 
 .cajas{
-    background-color: white;
     height: 15%;
     margin-top: 15px;
     width: 93%;
     margin-left: 20px;
     font-family: "Athiti",sans-serif;
-    display: flex;
-    justify-content: space-evenly;
 }
 
 .identificador{
     margin-top: 10px;
-    margin-right: 100px;
+    margin-left: 10%;
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+
 }
 
-.fechi{
-    width: 80px;
+.identificador1{
+    font-family: "Athiti",sans-serif;
+    color: white;
+    height: 20px;
+    font-size: 20px;
+    margin: 0%;
+}
+
+
+.fecha{
+    float: left;
+    margin-top: 55px;
     height: 30px;
+}
+.fechi{
+    width: 200px;
+    height: 15px;
     border-color: black;
-    margin-top: 10px;
+    margin-top: -30px;
+    margin-left: 125px;
+}
+
+label{
+    font-size: 17px;
+    margin-bottom: 10px;
+    color: white;
+    margin-top: 100px;
 }
 
 .btn-asignar{
     height: 35px;
-    margin-top: 10px;
+    margin-top: 120px;
+    margin-left: 300px;
 }
 
 .asignar{
@@ -79,5 +226,20 @@
     border-color: black;
     background-color: white;
     cursor: pointer;
-    width: 100px;
+    width: 150px;
+}
+
+.asignar:hover{
+    background-color: lightgrey;
+}
+
+p{
+    color: red;
+    font-size: 17px;
+    margin-top: 8px;
+}
+
+.fecha-nueva{
+    margin-top: 20px;
+    height: 100px;
 }
