--- a/src/app/pages/perfilCliente/vista-faq/vista-faq.component.html
+++ b/src/app/pages/perfilCliente/vista-faq/vista-faq.component.html
@@ -2,9 +2,9 @@
 <app-navbar-perfil-cliente></app-navbar-perfil-cliente>
 
 
-<div class="wrapper">
-  <div class="cajas">
-    <div class="caja">
+<div class="container-fluid">
+  <div class="row">
+    <div class="container-fluid">
       <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus1"(click)="showingBox1()"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -16,7 +16,7 @@
         <p >hola</p>
       </div>
     </div>
-    <div class="caja">
+    <div class="container-fluid">
       <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus2"(click)="showingBox2()"><i class="fa fa-plus" aria-hidden="true"></i></button>
@@ -28,7 +28,7 @@
         <p >hola</p>
       </div>
     </div>
-    <div class="caja">
+    <div class="container-fluid">
       <label for="title1">¿Cuánto dura la reparación de mi automóvil?</label>
       <div class="btn1">
         <button class="btn" *ngIf="plus3"(click)="showingBox3()"><i class="fa fa-plus" aria-hidden="true"></i></button>
