--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.html
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.html
@@ -1,18 +1,41 @@
-<div class='navbar'>
-    <div class='logo-menu'>
-        <div class='contenedor'>
-            <img class='logo' src='./assets/PARALELO2.png'>
+<nav class='navbar navbar-expand-lg navbar-light'>
+    <div class='container-fluid'>
+        <div class='row'>
+            <a class="navbar-brand" [routerLink]="['/vista-perfil-cliente']">
+                <img class='logo' src='./assets/PARALELO2.png'>
+              </a>
         </div>
+        <button
+         class="navbar-toggler"
+         type="button"
+         data-toggle="collapse" 
+         data-target="#navbarSupportedContent"
+         aria-controls="navbarSupportedContent" 
+         aria-expanded="false"
+         aria-label="Togle navigation"
+         >
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class='collapse navbar-collapse' id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+               <li class="nav-item">
+                    <a [routerLink]="['/faq']" class="nav-link">PREGUNTAS FRECUENTES</a>
+                </li> 
+                <li class="nav-item">
+                    <a [routerLink]="['/solicitar-cita']" class="nav-link">SOLICITAR CITA</a>
+                
+
+                </li>
+                <li class="nav-item">
+                    <a [routerLink]="['/vista-citas-cliente']" class="nav-link">REPARACIONES</a>
+                </li>
+                <li class="esconde">
+                    <a [routerLink]="['/inicio-sesion']" class="nav-link">INICIAR SESION</a>
+                </li>
+                <li class="esconde">
+                    <a [routerLink]="['/registro']" class=" nav-link">REGISTRARSE</a>
+                </li>
+        </ul>
     </div>
-    <div class='options-menu'>
-        <div class='incio-button'>
-            <span><a [routerLink]="['/faq']" style="color: black; text-decoration: none;">PREGUNTAS FRECUENTES</a></span>
-        </div>
-        <div class='contacto-button'>
-            <span><a [routerLink]="['/solicitar-cita']" style="color: black; text-decoration: none;">SOLICITAR CITA</a></span>
-        </div>
-        <div class='about-button'>
-            <span><a [routerLink]="['/vista-citas-cliente']" style="color: black; text-decoration: none;">REPARACIONES</a></span>
-        </div>
     </div>
-</div>
+</nav>
