--- a/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.scss
+++ b/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.scss
@@ -3,7 +3,11 @@
     width: 25%;
     height: 100%;
 }
-
+@media screen and (max-width: 600px) {
+    .right-navbar{
+    display:none;
+    }
+    }
 .right-navbar .buttons{
     width: 100%;
     height: 24.8%;
