--- a/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
+++ b/src/app/pages/perfilCliente/vista-datos-perfil-cliente/vista-datos-perfil-cliente.component.html
@@ -1,56 +1,43 @@
 <app-navbar-derecho-cliente></app-navbar-derecho-cliente>
 <app-navbar-perfil-cliente></app-navbar-perfil-cliente>
 
-<div class='wrapper'>
-    <div class='title-box'>
-        <div class='title'>
+<div class='container-fluid'>
+    <div class='container'>
             <span>DATOS DEL CLIENTE</span>
-        </div>
     </div>
-    <div class="space">
-        <div class='form-square'>
-            <div class='form-square-background'>
-                <form class='form' [formGroup]="datosform">
-                    <div class='group1'>
-                        <input type="text" required id="nombre" formControlName="nombre_apellido"><span class='bar'></span>
+    <div class="row">
+        <div class='col-md-5'>
+                <form [formGroup]="datosform">
+                    <div class='form-group'>
+                        <input type="text" class="form-control" required id="nombre" formControlName="nombre_apellido"><span class='bar'></span>
                         <label for=''>NOMBRE Y APELLIDO</label>
                     </div>
-                    <div class='group2'>
-                        <input type="text" required id="cedula" formControlName="cedula" required maxlength="8"><span class='bar'></span>
+                    <div class='form-group'>
+                        <input type="text" class="form-control" required id="cedula" formControlName="cedula" required maxlength="8"><span class='bar'></span>
                         <label for=''>CÉDULA DE IDENTIDAD</label>
                     </div>
-                    <div class='group3'>
-                        <input type="text" required id="fecha" formControlName="fecha"><span class='bar'></span>
+                    <div class='form-group'>
+                        <input type="text" class="form-control"  required id="fecha" formControlName="fecha"><span class='bar'></span>
                         <label for=''>FECHA DE NACIMIENTO</label>
                     </div>
-                    <div class='group4'>
-                        <input type="text" required id="lugar" formControlName="lugar"><span class='bar'></span>
+                    <div class='form-group'>
+                        <input type="text" class="form-control" required id="lugar" formControlName="lugar"><span class='bar'></span>
                         <label for=''>LUGAR DE RESIDENCIA</label>
                     </div>
-                    <div class='group4'>
-                        <input type="text" required id="numero" formControlName="numero"><span class='bar'></span>
+                    <div class='form-group'>
+                        <input type="text" class="form-control" required id="numero" formControlName="numero"><span class='bar'></span>
                         <label for=''>NÚMERO DE TELÉFONO</label>
                     </div>
-                    <div>
-                        <button (click)="modificarInfoUsuario()">GUARDAR CAMBIOS</button>
-                        <button>EDITAR</button>
-                    </div> 
+                        <button class="btn btn-primary"(click)="modificarInfoUsuario()">GUARDAR CAMBIOS</button>
+                        <button class="btn btn-primary">EDITAR</button> 
                 </form>
-            </div>
+            
         </div>
-        <div class="administrar">
-            <div class="texto1">
-                <span>ADMINISTRAR VEHÍCULOS</span>
-            </div>
-            <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo1']">IR A VEHÍCULO 1</button>
-            </div> 
-            <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo2']">IR A VEHÍCULO 2</button>
-            </div> 
-            <div class="btn">
-                <button [routerLink]="['/vista-registrar-vehiculo3']">IR A VEHÍCULO 3</button>
-            </div>  
+        <div class="col-md-7">
+                <h1>ADMINISTRAR VEHÍCULOS</h1>            
+                <button [routerLink]="['/vista-registrar-vehiculo1']" class="btn btn-default">IR A VEHÍCULO 1</button>
+                <button [routerLink]="['/vista-registrar-vehiculo2']" class="btn btn-default">IR A VEHÍCULO 2</button>
+                <button [routerLink]="['/vista-registrar-vehiculo3']" class="btn btn-default">IR A VEHÍCULO 3</button> 
         </div>
     </div>
     
