--- a/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
+++ b/src/app/pages/perfilCliente/vista-faq/vista-faq.component.scss
@@ -1,20 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
-.wrapper{
+.container-fluid{
     height: 80%;
-    width: 75%;
+    width: 100%;
     background-color: rgb(66, 66, 66);
-    float: left;
 }
 
-.cajas{
+.container-fluid .row{
   background-color: aqua;
   height: 0px;
 }
 
-.caja{
-  height: 50px;
+.container-fluid .row .container-fluid{
+  height: 55px;
   display: flex;
   justify-content: space-evenly;
   background-color: rgb(255, 201, 51);
@@ -40,15 +39,22 @@ label{
   padding-left: 7px;
   cursor: pointer;
 }
-
-.content{
-  height: 50px;
-  background-color: white;
+.caja1{
   width: 45%;
+  height: 30px;
   margin-top: 7px;
-  margin-left: 25%;
   border-radius: 6px;
   margin-bottom: -5px;
+  margin-left: 25%;
+}
+.content{
+  height: 30px;
+  background-color: white;
+  width: 100%;
+  margin-top: 7px;
+  border-radius: 6px;
+  margin-bottom: -5px;
+
 }
 
 i{
@@ -78,4 +84,28 @@ button{
   border-radius: 2px;
 }
 
+@media screen and (max-width: 600px) {
+  .container-fluid{
+      padding-bottom: 0;
+      margin-bottom: 0;
+      background-color: #494949;
+      height: 100%;
+  }
+
+
+  .container-fluid .row .container-fluid{
+    width: 80%;
+    margin: auto;
+    margin-bottom: 5%;
+  }
+  .caja1{
+    width: 80%;
+    height: 50px;
+  }
+  .content{
+    width: 80%;
+    margin-bottom: 5%;
+  }
+
+  }
 
