--- a/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.scss
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo3/vista-registro-vehiculo3.component.scss
@@ -119,3 +119,27 @@ img{
     margin-top: 350px;
     margin-left: -350px;
 }
+@media screen and (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        height: 150%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .wrapper .title-box .title{
+        margin: auto;
+    }
+    .form-square{
+        margin-top: 25%;
+        width: 100%;
+        height: 65%
+    }
+    
+    .citas{
+        height: 35%;
+    }
+    .wrapper .space .citas .btn2{
+        margin-top: 60px;
+       
+    }
+}
