--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
@@ -111,3 +111,12 @@ label{
     margin-top: 5px;
     margin-right: 5px;
 }
+@media screen and (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    .caja{
+        margin-left: 20%;
+    }
+}
