--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
@@ -83,9 +83,30 @@ label{
     font-weight: bold;
 }
 
-
-
-
+@media screen and (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        height: 150%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .wrapper .title-box .title{
+        margin: auto;
+    }
+    .form-square{
+        margin-top: 25%;
+        width: 100%;
+        height: 65%
+    }
+    
+    .citas{
+        height: 35%;
+    }
+    .wrapper .space .citas .btn2{
+        margin-top: 60px;
+       
+    }
+}
 
 
 
