--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
@@ -24,7 +24,6 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgb(66, 66, 66);
 }
 
 .form-square .form-square-background{
@@ -42,24 +41,29 @@
 
 .form-square .form-square-background .form{
     justify-content: center;
+    width: 100%;
 }
 
 .form-square .form-square-background .form .columnas{
     display: flex;
     justify-content: space-between;
     height: 90%;
+
 }
 
 .form-square .form-square-background .form .columna1{
     display: flex;
+    width: 33.33%;
     flex-direction: column;
     justify-content: center;
+ 
 }
 
 .form-square .form-square-background .form .columna2{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 33.33%;
 }
 
 .form-square .form-square-background .form .columna3{
@@ -77,7 +81,7 @@
     margin-bottom: 20px;
 }
 
-.form-square .form-square-background .send-button{
+.wrapper .form-square .form-square-background .send-button{
     height: 35px;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -104,4 +108,45 @@ label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px; 
     font-weight: bold;
+}
+@media screen and (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        height: 300%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .form-square .form-square-background{
+        width: 80%;
+        height: 90%;
+        margin-bottom: 0;
+    }
+    .wrapper .form-square .form-square-background .send-button{
+        width: 50%;
+        height: 5%;
+        margin-left: 25%; 
+    }
+
+    .form-square .form-square-background .form .columnas{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+    }
+    .form-square .form-square-background .form .columna1{
+        width: 100%;
+        height: 60%;
+        align-items: center;
+    }   
+    
+    .form-square .form-square-background .form .columna2{
+        width: 100%;
+        height: 60%;
+        align-items: center;
+    }
+    .form-square .form-square-background .form .columna3{
+        width: 100%;
+        height: 60%;
+        align-items: center;
+    }
 }
