--- a/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
+++ b/src/app/pages/perfil-gerente/vista-citas-asignadas/vista-citas-asignadas.component.html
@@ -10,10 +10,10 @@
   <div class='input-section'>
       <form [formGroup]="registroVehiculoForm"  class='input-form'>
           <div class='input'>
-              <input type="text" formControlName="correo" required><span class='bar'></span>
+              <input type="text" formControlName="placa" required><span class='bar'></span>
               <span>INGRESA LEL CORREO DEL USUARIO AL QUE ASIGNAR UNA CITA</span>
           </div>
-          <button class='input-button' type="submit">BUSCAR</button>
+          <button class='input-button' (click)='search()'>BUSCAR</button>
       </form>
   </div>
 
@@ -22,7 +22,7 @@
   <div class='form-square'>
       <div class='form-square-background'>
             <div class='identificador'>
-                <span *ngIf="correo">USUARIO DE CORREO {{correo}} ESPERANDO POR CITA</span>
+                <span *ngIf="correo">VEHICULO DE PLACA {{correo}} ESPERANDO POR CITA</span>
                 <span *ngIf="!correo">SIN RESULTADOS</span>
             </div>
           <form [formGroup]="fechaForm" class='fechaForm'>
@@ -35,7 +35,7 @@
                     <input class="fechi" type="datetime-local" formControlName="fechax">
                 </div>
                 <div class="btn-asignar">
-                    <button class="asignar">ASIGNAR</button>
+                    <button class="asignar" (click)='asignar()'>ASIGNAR</button>
                 </div>
               </div>
             </div>
