--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
@@ -10,7 +10,7 @@
     <div class='input-section'>
         <form [formGroup]="registroVehiculoForm" (ngSubmit)='search()' class='input-form'>
             <div class='input'>
-                <input type="text" formControlName="placa" required><span class='bar'></span>
+                <input type="text" formControlName="placa" required class="busca"><span class='bar'></span>
                 <span>INGRESA LA PLACA DEL VEHICULO</span>
             </div>
             <button class='input-button' type="submit">BUSCAR</button>
