--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
@@ -63,3 +63,10 @@
     display: none;
   }
 
+  @media screen and (max-width: 1024px) {
+    
+    .container-fluid .collapse .navbar-nav .nav-item{
+        width: 30%;
+        
+    }
+    }
