--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
@@ -64,3 +64,10 @@
     display: none;
   }
 
+  @media screen and (max-width: 1024px) {
+    
+    .container-fluid .collapse .navbar-nav .nav-item{
+        width: 30%;
+        
+    }
+    }
