--- a/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.scss
+++ b/src/app/components/perfilMecanico/nabvar-derecho-perfil-mecanico/nabvar-derecho-perfil-mecanico.component.scss
@@ -3,11 +3,19 @@
     width: 25%;
     height: 100%;
 }
-@media screen and (max-width: 600px) {
+/*}
+@media screen and (min-width: 767px) {
+    .right-navbar{
+        display:none;
+        }
+}*/
+@media screen and (max-width: 1024px) {
     .right-navbar{
     display:none;
     }
     }
+    
+
 .right-navbar .buttons{
     width: 100%;
     height: 24.8%;
