--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
@@ -79,3 +79,27 @@
     }
     
     }
+    @media screen and (max-width: 1024px) {
+        .container-fluid{
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0;
+            margin-bottom: 0;
+            height: 110%;
+            background-color: #494949;
+        }
+    
+    
+        .container-fluid .row{
+            width: 100%;
+            background-color: #494949;
+            height: 100%;
+            margin-bottom: 0;
+        }
+    
+        .container-fluid .row .col-md-6 .row{
+            width: 100%;
+            padding-bottom: 0;
+           
+        }
+    }
