--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
@@ -103,6 +103,24 @@
     }
     
     }
+    @media screen and (max-width: 1024px) {
+        .container-fluid{
+            padding-left: 0;
+            padding-right: 0;
+            height: 100%;
+        }
+    
+        .container-fluid .row{
+            width: 100%;
+            background-color: #494949;
+            
+        }
+    
+        .container-fluid .row .col-md-6 .row{
+            width: 100%;
+            
+        }
+        }
     
 
 
