--- a/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
@@ -94,7 +94,7 @@ a:hover{
 .container-fluid .row .col-md-12 .btn:hover{
     background-color: rgb(255, 201, 51);
 }
-@media screen and (min-width: 800px) { /* Con esto lo ocultamos en la pc y se deja visible solo en mobile */
+@media screen and (min-width: 1024px) { /* Con esto lo ocultamos en la pc y se deja visible solo en mobile */
 	.container-fluid .row .col-md-12 .btn-default{
 		display: none;
         text-align: center;
@@ -123,3 +123,14 @@ a:hover{
         width: 60%;
     }
     }
+    @media screen and (max-width: 1024px) {
+        .container-fluid .row{
+            width: 80%;
+            justify-content: center;
+        }
+        .container-fluid .row .col-md-12 .btn{
+            height: 20%;
+            width: 60%;
+            
+        }
+        }
