--- a/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
+++ b/src/app/pages/perfilCliente/vista-citas-cliente/vista-citas-cliente.component.scss
@@ -199,3 +199,12 @@
         border-bottom: 10px solid transparent;
     }
 }
+@media screen and (max-width: 1024px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+   
+    }
