--- a/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.scss
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo1/vista-registro-vehiculo1.component.scss
@@ -17,6 +17,7 @@
     font-family: 'Athiti', sans-serif;
     font-size: 25px;
     color: rgb(255, 201, 51);
+    
 }
 
 .wrapper .title-box .title2{
@@ -26,6 +27,7 @@
     margin-left: -550px;
     margin-top: 20px;
     position: static;
+    
 }
 
 .space{
@@ -121,6 +123,30 @@ img{
     margin-left: -350px;
 }
 @media screen and (max-width: 600px) {
+    .wrapper{
+        width: 100%;
+        height: 150%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .wrapper .title-box .title{
+        margin: auto;
+    }
+    .form-square{
+        margin-top: 25%;
+        width: 100%;
+        height: 65%
+    }
+    
+    .citas{
+        height: 35%;
+    }
+    .wrapper .space .citas .btn2{
+        margin-top: 60px;
+       
+    }
+}
+@media screen and (max-width: 1024px) {
     .wrapper{
         width: 100%;
         height: 150%;
