--- a/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.scss
+++ b/src/app/pages/perfilCliente/vista-registro-vehiculo2/vista-registro-vehiculo2.component.scss
@@ -143,3 +143,27 @@ img{
        
     }
 }
+@media screen and (max-width: 1024px) {
+    .wrapper{
+        width: 100%;
+        height: 150%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    .wrapper .title-box .title{
+        margin: auto;
+    }
+    .form-square{
+        margin-top: 25%;
+        width: 100%;
+        height: 65%
+    }
+    
+    .citas{
+        height: 35%;
+    }
+    .wrapper .space .citas .btn2{
+        margin-top: 60px;
+       
+    }
+}
