--- a/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
+++ b/src/app/pages/perfilCliente/vista-solicitar-citas/vista-solicitar-citas.component.scss
@@ -120,3 +120,12 @@ label{
         margin-left: 20%;
     }
 }
+@media screen and (max-width: 1024px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+    }
+    .caja{
+        margin-left: 20%;
+    }
+}
