--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.scss
@@ -25,7 +25,6 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: rgb(66, 66, 66);
 }
 
 .form-square .form-square-background{
@@ -42,8 +41,13 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
-
+.group1{
+    width: 100%;
+    height: 15%;
+}
 .form-square .form-square-background .form-tittle{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -54,8 +58,8 @@
 }
 
 .form-square .form-square-background .send-button{
-    height: 170px;
-    width: 100%;
+    height: 10%;
+    width: 80%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px; 
     font-weight: bold;
@@ -63,15 +67,15 @@
     border-radius: 5px;
     background-color: white;
     border-color: black;
+    margin: auto;
     
 }
 
 input{
-    width: 600px;
-    height: 10px;
+    width: 100%;
+    height: 20%;
     border-radius: 5px;                      
     font-size: 15px;            
-    margin: 10px 10px 10px 5px; 
     padding: 10px 10px 10px 5px;
     display: block;             
     border: none;
@@ -86,19 +90,16 @@ label{
 @media screen and (max-width: 600px) {
     .wrapper{
         width: 100%;
-        height: 150%;
+        height: 100%;
         padding-bottom: 0;
         margin-bottom: 0;
     }
-    .wrapper .title-box .title{
-        margin: auto;
+  
+    .form-square .form-square-background{
+        width: 80%;
+        height: 90%;
+        margin-bottom: 0;
     }
-    .form-square{
-        margin-top: 25%;
-        width: 100%;
-        height: 65%
-    }
-    
     .citas{
         height: 35%;
     }
@@ -108,7 +109,14 @@ label{
     }
 }
 
-
+@media screen and (max-width: 1024px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    }
 
 
 
