--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
@@ -150,3 +150,11 @@ label{
         align-items: center;
     }
 }
+@media screen and (max-width: 1024px) {
+    .wrapper{
+        width: 100%;
+        height: 100%;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
+    }
